--- a/css/stilo.css
+++ b/css/stilo.css
@@ -227,11 +227,9 @@ body{
 }
 .informacion{
     width: 50%;
-    position: relative;
-    left: 45%;
-    bottom: 13vw;
     text-align: center;
     font-size: 120%;
+    margin: 5%;
 }
 #titulo_introduccion{
     margin: 2%;
@@ -240,6 +238,13 @@ body{
     -webkit-background-clip: text;
     color: transparent;
     background-clip: text;
+}
+.contenido_informacion{
+    display: flex;
+    justify-content: center;
+}
+.contenedor_imagen{
+    margin: 5%;
 }
 #texto_introduccion{
     color:#383838
@@ -490,15 +495,18 @@ body{
         display: flex;
     }
     .informacion {
-        left: 0;
         width: 100%;
         height: auto;
+    }.contenido_informacion{
+        display: block;
+    
+    }
+    .contenido_imagen{
+        text-align: center;
     }
     #imagen_introduccion {
-        top:370px;
         width: 40vw;
         height: 40vw;
-        left: 30%;
     }
     .animacion{
         position: relative;
