mejorando estilo responsi a
mejorando estilo responsi para que se vea bien en otros dispositivos

--- a/css/stilo.css
+++ b/css/stilo.css
@@ -486,9 +486,25 @@ body{
     animation-iteration-count: infinite;
 }
 @media screen and (max-width:319px){
-    #imagen_introduccion{
-        top:420px;
+    .seccion_introduccion {
+        display: flex;
     }
+    .informacion {
+        left: 0;
+        width: 100%;
+        height: auto;
+    }
+    #imagen_introduccion {
+        top:420px;
+        width: 40vw;
+        height: 40vw;
+        left: 30%;
+    }
+    .animacion{
+        position: relative;
+        top:15vw;
+    }
+
 }
 @media screen and (max-width: 600px) and (min-width:320px){
     .seccion_introduccion {
